--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node": "^14.4.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sentiment": "^5.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
