--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node": "^14.4.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path": "^0.12.7",
     "sentiment": "^5.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
@@ -34,6 +34,7 @@
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.2",
