--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aylien_textapi": "^0.7.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "body-parser": "^1.19.0",
